<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28ABB9"
    tools:context=".activities.EnterSMSCodeActivity">

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="374dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="196dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/enterSMSCode"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:text="@string/EnterCode"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.github.gongw.VerifyCodeView
            android:id="@+id/verifyCodeView"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            app:vcDividerWidth="8dp"
            app:vcNextWrapperColor="#FFFFFF"
            app:vcTextColor="#FFFFFF"
            app:vcTextCount="6"
            app:vcTextSize="36sp"
            app:vcWrapper="centerLine"
            app:vcWrapperColor="#FFFFFF"
            app:vcWrapperStrokeWidth="2dp" />

        <Button
            android:id="@+id/CheckSMSCodeButton"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:onClick="verifySentCode"
            android:text="@string/CheckButton" />

        <TextView
            android:id="@+id/incorrectSMSCodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/IncorrectSMSCodeText"
            android:textAllCaps="false"
            android:textColor="#F44336"
            android:typeface="normal"
            android:visibility="invisible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>