<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainMenuActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="createViolationReport"
        android:src="@drawable/plus_without_background"
        app:backgroundTint="#28ABB9"
        app:backgroundTintMode="add"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:layout_gravity="top"
            android:layout_weight="0.3"
            android:background="@color/soft_green"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6">

                <cn.carbs.android.avatarimageview.library.AvatarImageView
                    android:id="@+id/avatar"
                    android:layout_width="133dp"
                    android:layout_height="133dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile_user" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="sans-serif"
                        android:text="Имя"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:typeface="normal"
                        tools:text="Имя" />

                    <TextView
                        android:id="@+id/userID"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="sans-serif"
                        android:text="\u004012345"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="#505050"
                        android:textSize="14sp"
                        android:typeface="normal"
                        tools:text="\u004012345" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="68dp"
                            android:layout_height="53dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/edit"
                            android:clickable="true"
                            android:onClick="editProfile" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="9dp"
                            android:layout_marginLeft="9dp"
                            android:layout_weight="3"
                            android:clickable="true"
                            android:fontFamily="sans-serif"
                            android:gravity="center_vertical"
                            android:onClick="editProfile"
                            android:text="@string/EditProfileButton"
                            android:textColor="#000000"
                            android:typeface="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="vertical"></LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="#00FFFFFF"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/fragmentTypeClickButton"
                            style="@style/scrollButtonsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:onClick="openViolationsFragment"
                            android:text="@string/SentViolations"
                            android:textAllCaps="false"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:typeface="normal"
                            app:backgroundTint="#EFFAD3"
                            app:cornerRadius="12dp" />

                        <Button
                            android:id="@+id/button2"
                            style="@style/scrollButtonsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:onClick="openAchievementsFragment"
                            android:text="@string/Achievements"
                            android:textAllCaps="false"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:typeface="normal"
                            app:backgroundTint="#EFFAD3"
                            app:cornerRadius="12dp" />

                        <Button
                            android:id="@+id/button3"
                            style="@style/scrollButtonsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:onClick="openMapFragment"
                            android:text="@string/Map"
                            android:textAllCaps="false"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:typeface="normal"
                            app:backgroundTint="#EFFAD3"
                            app:cornerRadius="12dp" />

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/usersFragmentsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>